[gd_scene load_steps=2 format=3 uid="uid://b8qeuyrh3r0di"]

[ext_resource type="Script" path="res://user_interface/title.gd" id="1_rr45n"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rr45n")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.0823529, 0.101961, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Title"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Continue"

[node name="Start" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Settings" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Settings"

[node name="Guide" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Guide"

[node name="Quit" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Guide" to="." method="_on_guide_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
